kuber-homeworks/1.5/configs/deploy-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
    - name: multitool-port
      protocol: TCP
      port: 80
      targetPort: 80
